position fixed + z-index

--- a/style.css
+++ b/style.css
@@ -40,10 +40,18 @@ span{
 .container{
     display: none;
 }
+header{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: 33;
+}
 
  /*                                                                                                                Shop List Start Here  */
  #shop{
     margin-top: 10px;
+    background-color: var(--paragrafs);
     
 }
 .shop-itemss{
@@ -88,7 +96,9 @@ span{
 }
 
  /*                                                                                                               CART start here! */
-
+#cart{
+    background-color: var(--paragrafs);
+}
 .cart-header{
     font-weight: bold;
     font-size: 1.25em;
@@ -106,6 +116,7 @@ span{
     margin-right: 1.5em;
     padding-bottom: 10px;
     margin-top: 10px;
+    
 }
 .cart-row{
     display: flex;
@@ -309,7 +320,9 @@ main{
     text-align: center;
     border-radius: 40px;
 }
-
+.howItWorks video{
+    z-index: 1;
+}
 .HowWhat h2{
     color: var(--paragrafs);
 }
